--- a/Public/index.html
+++ b/Public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Live Song Requests</title>
+<link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -93,5 +94,6 @@
       window.scrollTo(0, document.body.scrollHeight);
     });
   </script>
+<script src="script.js" defer></script>
 </body>
 </html>
