--- a/public/nxuan0702.html
+++ b/public/nxuan0702.html
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body>
-  <h1>🎶 小璇 直播间 点歌</h1>
+  <h1>🎶 精灵 直播间 点歌</h1>
 
   <div style="text-align:center;">
     <button id="clearButton">🗑️ 清空列表</button>
