--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,39 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>选择直播间</title>
+  <title>选择 TikToker's 点歌单</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
+      padding: 20px;
       background-color: #1e1e1e;
       color: #f5f5f5;
-      text-align: center;
-      padding: 20px;
+      overflow-x: hidden;
+      position: relative;
     }
 
     h1 {
       color: #ffffff;
       font-size: 28px;
-      margin-bottom: 30px;
+      text-align: center;
     }
 
     .tiktoker-container {
       display: flex;
-      justify-content: center;
-      gap: 20px;
+      justify-content: space-around;
       margin-top: 30px;
     }
 
     .tiktoker-card {
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      overflow: hidden;
       position: relative;
       width: 300px;
       height: 300px;
-      overflow: hidden;
-      border-radius: 8px;
-      border: 3px solid #ffffff;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-      transition: transform 0.3s, filter 0.3s;
+      transition: transform 0.3s ease;
     }
 
     .tiktoker-card img {
@@ -44,12 +44,8 @@
     }
 
     .tiktoker-card:hover {
-      transform: scale(1.1);
-      filter: blur(5px);
-    }
-
-    .tiktoker-card:hover ~ .tiktoker-card {
-      filter: blur(3px);
+      transform: scale(1.05);
+      filter: brightness(1.1);
     }
 
     .tiktoker-name {
@@ -57,71 +53,42 @@
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 20px;
-      color: white;
+      color: #ffffff;
+      font-size: 18px;
+      font-weight: bold;
       background-color: rgba(0, 0, 0, 0.6);
       padding: 5px;
       border-radius: 5px;
     }
 
-    button {
-      background: #ff4b4b;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-      font-size: 16px;
-      margin-bottom: 20px;
+    /* Animation for the blurred effect */
+    .tiktoker-card:hover ~ .tiktoker-card {
+      filter: blur(4px);
     }
 
-    button:hover {
-      background: #e63a3a;
+    .tiktoker-card:hover {
+      filter: none;
     }
   </style>
 </head>
 <body>
-  <h1>🎶 选择直播间</h1>
+  <h1>🎶 选择 TikToker's 点歌单</h1>
 
-  <div style="text-align:center;">
-    <button id="clearButton">🗑️ 清空列表</button>
-  </div>
-
-  <!-- TikTokers Container -->
   <div class="tiktoker-container">
-    <div class="tiktoker-card" onclick="window.location.href = '/euniceaiii.html';">
-      <img src="/img/euniceaiii.jpeg" alt="小嗳">
-      <div class="tiktoker-name">小嗳</div>
+    <div class="tiktoker-card" onmouseover="this.style.filter='blur(4px)'" onmouseout="this.style.filter='none'">
+      <a href="/euniceaiii.html">
+        <img src="/img/euniceaiii.jpeg" alt="小嗳的照片">
+        <div class="tiktoker-name">小嗳 (euniceaiii)</div>
+      </a>
     </div>
-    <div class="tiktoker-card" onclick="window.location.href = '/jingling.html';">
-      <img src="/img/jingling.jpeg" alt="静灵">
-      <div class="tiktoker-name">静灵</div>
+
+    <div class="tiktoker-card" onmouseover="this.style.filter='blur(4px)'" onmouseout="this.style.filter='none'">
+      <a href="/jingling.html">
+        <img src="/img/jingling.jpeg" alt="静灵的照片">
+        <div class="tiktoker-name">静灵 (jingling)</div>
+      </a>
     </div>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-
-    const clearButton = document.getElementById('clearButton');
-
-    clearButton.addEventListener('click', () => {
-      if (confirm('确定要清空点歌列表吗？')) {
-        fetch('/clear-requests', { method: 'POST' })
-          .then(res => res.json())
-          .then(result => {
-            if (result.success) {
-              alert('点歌列表已清空！');
-            } else {
-              alert('清空失败，请检查服务器！');
-            }
-          })
-          .catch(err => {
-            console.error('Error:', err);
-            alert('网络错误，清空失败！');
-          });
-      }
-    });
-  </script>
 </body>
 </html>
