--- a/public/index.html
+++ b/public/index.html
@@ -84,8 +84,8 @@
 
     <div class="tiktoker-card" onmouseover="this.style.filter='blur(4px)'" onmouseout="this.style.filter='none'">
       <a href="/jingling.html">
-        <img src="/img/jingling.jpeg" alt="静灵的照片">
-        <div class="tiktoker-name">静灵 (jingling)</div>
+        <img src="/img/jingling.jpeg" alt="精灵的照片">
+        <div class="tiktoker-name">精灵 (jingling)</div>
       </a>
     </div>
   </div>
