--- a/public/index.html
+++ b/public/index.html
@@ -79,14 +79,14 @@
     <div class="tiktoker-card">
       <a href="/euniceaiii.html">
         <img src="/img/euniceaiii.jpeg" alt="小嗳的照片">
-        <div class="tiktoker-name">小嗳 (euniceaiii)</div>
+        <div class="tiktoker-name">小嗳按这边</div>
       </a>
     </div>
 
     <div class="tiktoker-card">
       <a href="/jingling.html">
         <img src="/img/jingling.jpeg" alt="精灵的照片">
-        <div class="tiktoker-name">精灵 (jingling)</div>
+        <div class="tiktoker-name">精灵按这边</div>
       </a>
     </div>
   </div>
