--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,23 @@
     .tiktoker-card:hover {
       filter: none;
     }
+
+    /* Snowflake styles */
+    .snowflake {
+      position: fixed;
+      top: -10px;
+      color: white;
+      font-size: 1.2em;
+      animation: fall linear infinite;
+      opacity: 0.8;
+      z-index: 9999;
+    }
+
+    @keyframes fall {
+      0% { transform: translateY(0) rotate(0deg); }
+      100% { transform: translateY(100vh) rotate(360deg); }
+    }
+
   </style>
 </head>
 <body>
@@ -85,11 +102,26 @@
 
     <div class="tiktoker-card">
       <a href="/jingling.html">
-        <img src="/img/jingling.jpeg" alt="精灵的照片">
+        <img src="/img/jingling.jpeg" alt="静灵的照片">
         <div class="tiktoker-name">精灵按这边</div>
       </a>
     </div>
   </div>
+
+  <!-- Snow effect -->
+  <script>
+    function createSnowflake() {
+      const snowflake = document.createElement('div');
+      snowflake.classList.add('snowflake');
+      snowflake.textContent = '❄️';
+      snowflake.style.left = Math.random() * window.innerWidth + 'px';
+      snowflake.style.animationDuration = (Math.random() * 3 + 2) + 's';
+      snowflake.style.fontSize = (Math.random() * 10 + 10) + 'px';
+      document.body.appendChild(snowflake);
+      setTimeout(() => snowflake.remove(), 5000);
+    }
+    setInterval(createSnowflake, 200);
+  </script>
 
 </body>
 </html>
