update patch note

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,18 @@
       text-align: center;
     }
 
+    .patch-note {
+      text-align: center;
+      font-size: 16px;
+      color: #ffffff;
+      margin: 20px auto;
+      padding: 10px;
+      background-color: #333333;
+      border-radius: 8px;
+      width: 80%;
+      max-width: 600px;
+    }
+
     .photo-container {
       display: flex;
       justify-content: center;
@@ -89,6 +101,14 @@
 </head>
 <body>
   <h1>🎶 选择 TikToker</h1>
+
+  <!-- Patch Notes -->
+  <div class="patch-note">
+    系统更新4月17号：<br>
+    1. 直播间点歌 # 后面有空格也会记录<br>
+    2. 修复时间显示马来西亚时间<br>
+    3. 新增精灵的直播间点歌页面
+  </div>
 
   <div class="photo-container">
     <div class="photo" id="euniceaiii">
