--- a/public/euniceaiii.html
+++ b/public/euniceaiii.html
@@ -105,7 +105,7 @@
 
     function addRequestToList(request) {
       const li = document.createElement('li');
-      const time = request.time || new Date().toLocaleTimeString();
+      const time = request.time ?? '';
       li.textContent = `[${time}] ${request.user}: ${request.song}`;
       list.appendChild(li);
       window.scrollTo(0, document.body.scrollHeight);
