--- a/public/index.html
+++ b/public/index.html
@@ -104,10 +104,11 @@
 
   <!-- Patch Notes -->
   <div class="patch-note">
-    系统更新4月17号：<br>
-    1. 直播间点歌 # 后面有空格也会记录<br>
+    系统更新4月18号：<br>
+    1. 直播间点歌 # 后面有空格也会记录, 中文的#也可以了<br>
     2. 修复时间显示马来西亚时间<br>
-    3. 新增精灵的直播间点歌页面
+    3. 新增精灵的直播间点歌页面，欢迎精灵使用这个系统
+    ----记得不要删除别人的歌单哟------
   </div>
 
   <div class="photo-container">
