--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
     });
 
     document.getElementById('jingling').addEventListener('click', () => {
-      window.location.href = '/jingling.html';
+      window.location.href = '/nxuan0702.html';
     });
   </script>
 </body>
